# Research-Paper-Study-Buddy

./: LICENSE  README.md  main.py  pyproject.toml  study_agent.py  summary_agent.py
tools/: paper_processor.py  vector_chunks.py
